<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Corider</string>
    <string name="ok">OK</string>
    <string name="where_r_u_going">Where are you going ?</string>
    <string name="search_hint">Where are you going ?</string>
    <string name="Update">Update</string>
    <string name="share_ride_splash_msg">Share a ride instantly from a spot </string>
    <string name="offer_ride_splash_msg">Offer a rider to others </string>
    <string name="find_ride_splash_msg">Find a ride </string>
    <string name="people_waiting_msg"> people waiting to share rides at</string>
    <string name="register">Submit</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Refresh</item>
        <item>Profile</item>
        <item>Find a Ride</item>
        <item>Offer a Ride</item>
        <item>Share with friends</item>
        <item>Rate us</item>
        <item>Feedback</item>
        <item>Terms of use</item>
        <item>About us</item>
        <item>Exit</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_refresh</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/car</item>
        <item>@drawable/car</item>
        <item>@drawable/ic_action_share</item>
        <item>@drawable/ic_action_good</item>
        <item>@drawable/ic_action_mail</item>
        <item>@drawable/ic_action_mail</item>
        <item>@drawable/ic_action_about</item>
        <item>@drawable/ic_exit</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Messages -->
    <string name="network_error_dialog_title"> No internet connection</string>
    <string name="network_error_msg">Please check your settings</string>
    <string name="btn_enable">Enable</string>
    <string name="gps_network_not_enabled_title">Location Services Disabled</string>
    <string name="location_service_msg">Please enable location Services</string>
    <string name="finding_current_location">Finding Your Current Location</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_need_ride">Need a ride\nComing soon</string>
    <string name="lbl_offer_ride">Offer a ride\nComing soon</string>
    <string name="lbl_want_to_share_ride">Want to share a ride now</string>

    <!-- Address fetching -->
    <!-- User interface labels and strings -->
    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="email">Email Address</string>
    <string name="name">Display name</string>
    <!-- <string name="register_account">Register For A Corider Account</string> -->

    <string name="accept_terms">I accepts</string>
    <string name="terms"><a href="http://www.google.com"> Terms of Use</a></string>
    <string name="error_msg_terms_condition">Please accept terms and condition.</string>
    <string name="profile">Profile</string>
    <string name="signup">SignUp ...</string>

    <!-- messages -->
    <string name="share_a_ride_msg">I am interested to share a ride with you.</string>
    <string name="want_different_search_msg">You want to search for different destination ?</string>
    <string name="email_verification_pending_dialog_title">Email verification pending</string>
    <string name="email_activation_msg">Please activate your account by clicking on activation url sent on your registered emailId</string>
    <string name="reg_dialog_completion_title">Registration complete</string>
    <string name="server_connection_fail_msg">Couldn\'t connect with server. Please try again.</string>
    <string name="title_error">ERROR</string>
    <string name="profile_update_success_msg_title">Profile updated</string>
    <string name="profile_updated_success_msg">Your profile updated successfully</string>

    <!-- btn text -->
    <string name="yes_lbl">Yes</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="send_lbl">Send</string>
    <string name="reply_lbl">Reply</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="idle_title">You have been inactive for long</string>
    <string name="idle_msg">What do you want to do ?</string>
    <string name="currentLocation">CurrentLocation</string>
    <string name="destination">Destination</string>
    <string name="refresh_title">Refresh</string>
    <string name="onCurrent_location_btn_click_msg">Do you want to refresh current search results ?</string>
    <string name="refresh_btn">Refresh</string>
    <string name="exit_btn">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="refresh_current_location_on_map">Do you want to refresh your current location on map ?</string>
    <string name="get_current_location_address">Failed to get your current address. Please try again.</string>

    <!-- Offer a ride fragment -->
    <string name="from_lbl">From (Specific address)</string>
    <string name="to_lbl">To (Specific address)</string>
    <string name="date_time_header">DATE AND TIME</string>
    <string name="round_trip_lbl">Round Trip</string>
    <string name="departure_date">Departure date</string>
    <string name="return_date">Return date</string>
    <string name="time">Time</string>
    <string name="next">Next</string>
    <string name="ride_comment_header">RIDER COMMENT</string>
    <string name="seats_available">Seats Available</string>
    <string name="price_header">PRICE</string>
    <string name="ride_details">RIDE DETAILS</string>
    <string name="max_luggage_size">MAX LUGGAGE SIZE</string>
    <string name="you_will_leave">YOU WILL LEAVE</string>
    <string name="detour">DETOUR</string>
    <string name="max_detour">$%s mins detour max</string>
    <string name="terms_condition">You hereby certify that you hold a driving licence and valid car insurance</string>
    <string name="public_btn_lbl">Publish</string>
    <string name="rider_comment_hint">WRITE YOUR RIDE COMMENT HERE: Share Extra information about your like education, profession etc..</string>
    <string name="publish">Publish</string>
    <string name="no_luggage">No Luggage</string>
    <string name="on_time">Right on Time</string>
    
    <string-array name="luggage_sizes">
        <item name="medium">Medium</item>
        <item name="large">Large</item>
        <item name="short">Short</item>
             
    </string-array>
    
    <string-array name="leaving_time">
        <item name="leave_on_time">Right on Time</item>
        <item name="max_15_min_delay">Max 15 min Delay</item>
        
    </string-array>
    
    <string-array name="detour">
       <item name="detour_max">15 mins detour max</item>
       <item name="detour_min">10 mins detour max</item>
       <item name="detour_normal">5 mins detour max</item> 
        
    </string-array>

</resources>