<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/to_from_btn_height"
        android:background="@color/blue"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/ride_details"
            android:textSize="@dimen/headerTextSize" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="10dp"
        android:text="@string/max_luggage_size"
        android:textSize="@dimen/sub_header_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/sub_header_icon_size"
            android:layout_height="@dimen/sub_header_icon_size"
            android:src="@drawable/car" />

        <Spinner
            android:id="@+id/luggage_size"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sub_header_icon_size"
             android:layout_marginLeft="@dimen/left_margin"
           
            android:entries="@array/luggage_sizes"
            android:prompt="@string/no_luggage" >
        </Spinner>
   
        </LinearLayout>

    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="10dp"
        android:text="@string/you_will_leave"
        android:textSize="@dimen/sub_header_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/sub_header_icon_size"
            android:layout_height="@dimen/sub_header_icon_size"
            android:src="@drawable/car" />

        <Spinner
            android:id="@+id/leave_on_time"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sub_header_icon_size"
             android:layout_marginLeft="@dimen/left_margin"
           
            android:entries="@array/leaving_time"
            android:prompt="@string/on_time" >
        </Spinner>
   
        </LinearLayout>
        
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="10dp"
        android:text="@string/terms_condition"
        android:textSize="@dimen/sub_header_text_size" />
     
      <Button
        android:id="@+id/btn_offer_publish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/publish" />
    
</LinearLayout>