<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:orientation="vertical" >
           <TextView
            android:id="@+id/register_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:fontFamily="sans-serif-light"
            android:drawableLeft="@drawable/ic_smiley"
            android:drawablePadding="@dimen/drawable_padding"
            android:text="@string/profile"
            android:textColor="@color/body_text_primary"
            android:textSize="@dimen/header_textsize" />

        <TextView
            android:id="@+id/register_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/register_account"
            android:layout_marginTop="@dimen/margintop"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/red"
            android:textSize="@dimen/all_media_body_text_size" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_error_msg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margindouble"
            android:fontFamily="sans-serif-light"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingTop="@dimen/edittext_padding"
            android:textColor="@color/body_text_primary"
            android:textSize="@dimen/all_media_body_text_size" />

        <EditText
            android:id="@+id/register_email_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginTop="@dimen/edit_margintop"
            android:fontFamily="sans-serif-light"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingTop="@dimen/edittext_padding"
            android:textColor="@color/body_text_primary"
            android:textSize="@dimen/all_media_body_text_size" >
        </EditText>

        <LinearLayout
            android:id="@+id/terms_condition_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/edit_margintop"
            android:layout_below="@+id/register_email_address" >

            <CheckBox
                android:id="@+id/accept_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:id="@+id/checkbox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/accept_terms"
                android:textColor="@color/body_text_primary"
                android:textSize="@dimen/all_media_body_text_size" />
             <TextView
                android:id="@+id/terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:autoLink="all"
                android:paddingLeft="@dimen/term_condition_margin"
                 android:linksClickable="true"
                android:textColor="@color/body_text_primary"
                android:textSize="@dimen/all_media_body_text_size" />
             
        </LinearLayout>
        <!-- </com.ssinfo.corider.app.components.ClearEditText> -->

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/terms_condition_section"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/reg_button_selector"
            android:fontFamily="sans-serif-light"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/welcome_button_text_size" />
    </RelativeLayout>
   

</LinearLayout>