<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/to_from_btn_height"
        android:background="@color/blue"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/price_header"
            android:textSize="@dimen/headerTextSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recommended_info_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_left"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/source_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="New Delhi >> Chandigarh"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/to_from_lbl_text_size" />

            <TextView
                android:id="@+id/recommended_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="500 RS : Recommended price"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/to_from_lbl_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_price_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/btn_reduce_price"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/car" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="500"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/btn_increase_price"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:src="@drawable/car" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/seats_info_section"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/margin_left"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_seats_available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seats_available"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/to_from_lbl_text_size" />

        <LinearLayout
            android:id="@+id/set_seat_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/btn_reduce_seat"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/car" />

            <TextView
                android:id="@+id/seat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="5"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/btn_increase_seat"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:src="@drawable/car" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/to_from_btn_height"
        android:background="@color/blue"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/ride_comment_header"
            android:textSize="@dimen/headerTextSize" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTxt_rider_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margintop"
        android:ems="10"
        android:hint="@string/rider_comment_hint"
        android:inputType="textMultiLine" >
        
    </EditText>

     <LinearLayout
            android:id="@+id/terms_condition_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/edit_margintop"
            android:layout_below="@+id/register_email_address" >

            <CheckBox
                android:id="@+id/accept_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:id="@+id/checkbox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/accept_terms"
                android:textColor="@color/body_text_primary"
                android:textSize="@dimen/all_media_body_text_size" />
             <TextView
                android:id="@+id/terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:autoLink="all"
                android:paddingLeft="@dimen/term_condition_margin"
                 android:linksClickable="true"
                android:textColor="@color/body_text_primary"
                android:textSize="@dimen/all_media_body_text_size" />
             
        </LinearLayout>
        
       <Button
        android:id="@+id/btn_offer_publish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/publish" />
    
</LinearLayout>